Fixed alignment of similar listing div

--- a/custom.css
+++ b/custom.css
@@ -538,7 +538,7 @@ footer{background-color:#03B5B5; white-space: nowrap;}
 }
 
 .simlist{
-	margin: 0 5vw 0 5vw;
+    	clear: left;
 	padding: 0 50px;
 }
 
